--- a/assets/style.css
+++ b/assets/style.css
@@ -4,11 +4,12 @@ body {
     font-family: Calluna;
 }
 
-header {
+body header {
     height: 52px;
     /*background-image: linear-gradient(bottom, #323232 0%, #121212 40%);
     background-image: -moz-linear-gradient(bottom, #323232 0%, #121212 40%);*/
     background-image: -webkit-linear-gradient(bottom, #323232 0%, #121212 40%); 
+    color: white;
     margin: 0;
 }
 
@@ -16,13 +17,15 @@ header h1 {
     float: left;
     margin: 0;
     padding: 8px 12px;
-    color: white;
     font-family: MuseoSlab;
 }
 
-#register {
+#register, #account-sidebar {
     width: 20%;
-    float: right;
+}
+
+#register label {
+    display: block;
 }
 
 #content {
@@ -37,4 +40,52 @@ header h1 {
 
 .exlibris {
     font-family: MuseoSlab;
+}
+
+#header-login, #register, #account-sidebar {
+    float: right;
+    font-family: CallunaSans;
+    font-size: 80%;
+    padding: 0.9em;
+}
+
+#header-login a, #register a, #account-sidebar a {
+    text-decoration: none;
+    color: white;
+}
+
+#header-login label {
+    margin: 0.3em;
+    color: white;
+}
+
+#header-login input {
+    border: solid 1px #626262;
+    background-color: #a1a1a1;
+    margin-right: 2em;
+    width: 20%;
+    padding: 0.4em;
+}
+
+#header-login input[type='submit'] {
+    border: none;
+    background: none;
+    color: white;
+    margin: 0;
+    width: auto;
+    cursor: pointer;
+}
+
+p#header-login {
+    margin: 0.5em;
+}
+
+.sep { margin: 0 1em; }
+
+#account-sidebar {
+    /* background-image: -webkit-linear-gradient(bottom, #1e5799 0%, #2989d8 50%, #207cca 51%, #7db9e8 100%); */
+    /* background-image: -webkit-linear-gradient(bottom, #fceabb 0%, #fccd4d 50%,#f8b500 51%, #fbdf93 100%); */
+    background-image: -webkit-linear-gradient(bottom, #4a4d51 0%, #36393d 50%, #3c3f43 51%, #7e8082 100%);
+    margin: 2em 0.5em;
+    border-radius: 1em;
 }
