Simplified a few things to make it easier for me, figured out a raw_query to get Text by Book, figured out how to generate a record for a book with all its data, passed it to template

--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -4,5 +4,18 @@
 
 {% block content %}
 <h2>Dashboard</h2>
-<p>This is your dashboard</p>
+<p><b>{{ user.username}}</b> &mdash; {{ person.tagline }}</p>
+
+<h3>My Locations</h3>
+<img src="{{ STATIC_URL }}mock-map.png" />
+
+<h3>My Collections</h3>
+    {% for collection in person.collections %}
+    <h4>{{ collection.name }}</h4>
+        <ul>
+        {% for record in records %}
+            <li>pine{{ record.title }}apple</li>
+        {% endfor %}
+        </ul>
+    {% endfor %}
 {% endblock %}
