--- a/assets/style.css
+++ b/assets/style.css
@@ -1,7 +1,16 @@
+html, body {
+    height: 100%;
+}
+
 body {
     margin: 0;
     background-image: url('/static/background.gif');
     font-family: Calluna;
+}
+
+input.clean {
+    color: #aaa;
+    font-style: italic;
 }
 
 body header {
@@ -11,6 +20,10 @@ body header {
     background-image: -webkit-linear-gradient(bottom, #323232 0%, #121212 40%); 
     color: white;
     margin: 0;
+}
+
+#wrapper {
+    min-height: 100%;
 }
 
 header h1 {
@@ -88,4 +101,38 @@ p#header-login {
     background-image: -webkit-linear-gradient(bottom, #4a4d51 0%, #36393d 50%, #3c3f43 51%, #7e8082 100%);
     margin: 2em 0.5em;
     border-radius: 1em;
+}
+
+/* DASHBOARD */
+table.collection {
+    font-family: CallunaSans;
+    font-size: 80%;
+    background-color: #fff;
+    border: dashed 2px #646464;
+    border-collapse: collapse;
+    width: 100%;
+}
+
+table.collection th, table.collection td {
+    padding: 0.8em;
+}
+
+table.collection th {
+    border-bottom: dashed 2px #646464;
+}
+
+table.collection td.action ul {
+    text-indent: none;
+    list-style: none;
+    margin: 0;
+    padding: 0;
+}
+
+footer {
+    height: 52px;
+    background-color: #121212;
+    color: white;
+    margin: 0;
+    padding: 20px;
+    text-align: center;
 }
