--- a/templates/books/add.html
+++ b/templates/books/add.html
@@ -6,7 +6,7 @@
 <h2>Add a Book</h2>
 <p>Fill out the details of a book you have to add it to your <span class="exlibris">exlibris</span> collection.</p>
 
-<form method="post">
+<form id="yeah" method="post" onsubmit="books.views.add.textSelect(this);return false">
 <p><strong>First,</strong> type the title of the book to find out if we already know about it. Suggestions will appear automatically
 as you type. If you see the book you have, select it. Otherwise, you may have to fill out a few additional data about
 your book.</p>
@@ -19,7 +19,7 @@ $(function(){
 });
 </script>
 <input type="text" class="clean" value="e.g. Catch-22" name="q" id="text_title" />
-<input type="button" value="Select" />
+<input type="button" value="Select" id="text_select" />
 </div>
 
 
