--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -12,15 +12,15 @@
     <h4>{{ collection.name }}</h4>
         <table class="collection">
         <tr><th>Title</th><th>Author</th><th>Published</th><th></th></tr>
-        {% for record in collection.records %}
+        {% for book in collection.books %}
             <tr>
-                <td><a href="/text/{{ record.text_slug }}">{{ record.title }}</a></td>
-                <td>{{ record.author }}</td>
-                <td style="width: 15em">{{ record.publisher }}, {{ record.published_date|date:"M Y" }}</td>
+                <td><a href="/text/{{ book.edition.text.slug }}">{{ book.edition.text.title }}</a></td>
+                <td>{{ book.edition.text.author }}</td>
+                <td style="width: 15em">{{ book.edition.publisher }}, {{ book.edition.published_date|date:"M Y" }}</td>
                 <td class="action">
                     <ul>
-                        <li><a href="/books/edit/{{ record.book_id }}">Edit</a></li>
-                        <li><a href="javascript:xajax_deleteBook('{{ record.book_id }}')">Delete</a></li>
+                        <li><a href="/books/edit/{{ book.id }}">Edit</a></li>
+                        <li><a href="/books/edit/{{ book.id }}">Delete</a></li>
                     </ul>
                 </td>
             </tr>
